--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -632,7 +632,7 @@ body {
             left: 0;
             top: 0;
             width: 100%;
-            height: 100%;
+            height: 100%; 
             border-radius: 0 0 200px;
             background-size: cover;
             background-position: center;
@@ -725,7 +725,7 @@ body {
                 h2 {
                     @include each(font-size, 25px, 12px);
                     font-weight: 400;
-                    color: rgba(#9a8197, 0.5);
+                    color: rgba(#800a72, 0.5);
                     span {
                         display: inline-block;
                         @include each(padding-bottom, 16px, 7px);
@@ -910,14 +910,14 @@ body {
     .fullfillment_new_inner {
         position: relative;
         height: 100vh;
-        background: #fff;
+        background: #ffffff00;
         width: 100%;
         max-width: 1920px;
         max-width: 1500px;
         margin: 0 auto;
     }
     .fullfillment_new_inner .fullfillment_new_container {
-        width: 100%;
+        width: 130%;
         height: 100%;
         display: flex;
         align-items: center;
@@ -1092,6 +1092,43 @@ body {
                 font-weight: 700;
                 opacity: 0;
                 transition: all 0.3s ease-in-out;
+                
+                lang-ko-quot-begin {
+                    color: #FFF;
+                    leading-trim: both;
+                    text-edge: cap;
+                    font-family: "Reddit Mono";
+                    font-size: 64px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 20px; /* 62.5% */
+                    letter-spacing: -0.32px;
+                    margin-left: -45px;
+                }
+
+                lang-ko-quot-end {
+                    color: #FFF;
+                    leading-trim: both;
+                    text-edge: cap;
+                    font-family: "Reddit Mono";
+                    font-size: 64px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 150px; /* 62.5% */
+                    letter-spacing: -0.32px;
+                }
+
+                lang-ko {
+                    color: #FFF;
+                    leading-trim: both;
+                    text-edge: cap;
+                    font-family: NanumMyeongjo;
+                    font-size: 25px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 40px;
+                    letter-spacing: -0.125px;
+                }
             }
         }
     }
