--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1077,6 +1077,9 @@ body {
     height: 62px;
   }
 }
+#header .lang-ko {
+  color: #91A28F;
+}
 #header:not(.fixed) {
   position: relative;
 }
@@ -1264,10 +1267,10 @@ body {
   position: relative;
 }
 #header aside li:nth-of-type(1) a {
-  background-image: url("../images/flag_korea.svg");
+  background-image: url("../images/flag_earth.svg");
 }
 #header aside li:nth-of-type(2) a {
-  background-image: url("../images/flag_hongkong.svg");
+  background-image: url("../images/flag_korea.svg");
 }
 #header aside li:nth-of-type(3) a {
   background-image: url("../images/flag_china.svg");
@@ -1341,7 +1344,12 @@ body {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
-  font-size: 15px;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px; /* 175% */
 }
 @media (min-width: 1281px) {
   #header nav {
@@ -1461,7 +1469,7 @@ body {
   text-indent: 100%;
   white-space: nowrap;
   font-size: 0.5rem;
-  background: url("../images/logo2.svg") no-repeat center/100%;
+  background: url("../images/logo2-en.svg") no-repeat center/100%;
 }
 @media (min-width: 1281px) {
   .vi header h1 {
@@ -1482,6 +1490,12 @@ body {
   .vi header h1 {
     height: 88px;
   }
+}
+.vi header h1.lang-ko {
+  background: url("../images/logo2-ko.svg") no-repeat center/100%;
+}
+.vi header h1.lang-zh {
+  background: url("../images/logo2-zh.svg") no-repeat center/100%;
 }
 .vi header p {
   z-index: 2;
@@ -2047,7 +2061,7 @@ body {
 }
 .production .swiper .swiper-slide div h2 {
   font-weight: 400;
-  color: rgba(128, 10, 114, 0.5);
+  color: rgba(154, 129, 151, 0.5);
 }
 @media (min-width: 1281px) {
   .production .swiper .swiper-slide div h2 {
@@ -2072,6 +2086,18 @@ body {
   .production .swiper .swiper-slide div h2 span {
     padding-bottom: 7px;
   }
+}
+.production .swiper .swiper-slide div h2 span.lang-ko {
+  border-bottom: 1px solid rgba(145, 162, 143, 0.5);
+}
+.production .swiper .swiper-slide div h2 span.lang-zh {
+  border-bottom: 1px solid rgba(221, 87, 122, 0.5);
+}
+.production .swiper .swiper-slide div h2.lang-ko {
+  color: rgba(145, 162, 143, 0.5);
+}
+.production .swiper .swiper-slide div h2.lang-zh {
+  color: rgba(221, 87, 122, 0.5);
 }
 .production .swiper .swiper-slide div h3 {
   position: relative;
@@ -2132,6 +2158,18 @@ body {
   .production .swiper .swiper-slide div h3::before {
     font-size: 111px;
   }
+}
+.production .swiper .swiper-slide div h3.lang-ko {
+  color: #91A28F;
+}
+.production .swiper .swiper-slide div h3.lang-ko::before {
+  color: rgba(145, 162, 143, 0.2);
+}
+.production .swiper .swiper-slide div h3.lang-zh {
+  color: #DD577A;
+}
+.production .swiper .swiper-slide div h3.lang-zh::before {
+  color: rgba(221, 87, 122, 0.2);
 }
 .production .swiper .swiper-slide div p {
   line-height: 1.76;
@@ -2305,6 +2343,12 @@ body {
     font-size: 29px;
   }
 }
+.logistics .swiper .swiper-slide div h2.lang-ko {
+  color: rgba(145, 162, 143, 0.5);
+}
+.logistics .swiper .swiper-slide div h2.lang-zh {
+  color: rgba(221, 87, 122, 0.5);
+}
 .logistics .swiper .swiper-slide div p {
   line-height: 1.76;
   color: #555;
@@ -2437,6 +2481,14 @@ body {
     font-size: 110px;
   }
 }
+.fulfillment_new header h2.lang-ko,
+.fulfillment_new footer h2.lang-ko {
+  color: #91A28F;
+}
+.fulfillment_new header h2.lang-zh,
+.fulfillment_new footer h2.lang-zh {
+  color: #DD577A;
+}
 .fulfillment_new header span,
 .fulfillment_new footer span {
   display: block;
@@ -2465,6 +2517,14 @@ body {
   .fulfillment_new footer span {
     font-size: 22px;
   }
+}
+.fulfillment_new header span.lang-ko,
+.fulfillment_new footer span.lang-ko {
+  color: #91A28F;
+}
+.fulfillment_new header span.lang-zh,
+.fulfillment_new footer span.lang-zh {
+  color: #DD577A;
 }
 @media (min-width: 1281px) {
   .fulfillment_new header dl,
@@ -2901,6 +2961,14 @@ body {
     font-size: 110px;
   }
 }
+.fulfillment header h2.lang-ko,
+.fulfillment footer h2.lang-ko {
+  color: #91A28F;
+}
+.fulfillment header h2.lang-zh,
+.fulfillment footer h2.lang-zh {
+  color: #DD577A;
+}
 .fulfillment header span,
 .fulfillment footer span {
   display: block;
@@ -2929,6 +2997,14 @@ body {
   .fulfillment footer span {
     font-size: 22px;
   }
+}
+.fulfillment header span.lang-ko,
+.fulfillment footer span.lang-ko {
+  color: #91A28F;
+}
+.fulfillment header span.lang-zh,
+.fulfillment footer span.lang-zh {
+  color: #DD577A;
 }
 @media (min-width: 1281px) {
   .fulfillment header dl,
@@ -3335,6 +3411,12 @@ body {
     font-size: 13px;
   }
 }
+.metrics header p.lang-ko {
+  color: rgba(145, 162, 143, 0.7);
+}
+.metrics header p.lang-zh {
+  color: rgba(221, 87, 122, 0.7);
+}
 .metrics ul {
   display: flex;
   flex-direction: row;
@@ -3462,6 +3544,12 @@ body {
     line-height: 58px;
   }
 }
+.metrics ul li strong.lang-ko {
+  color: #91A28F;
+}
+.metrics ul li strong.lang-zh {
+  color: #DD577A;
+}
 .metrics ul li span {
   position: relative;
   display: block;
@@ -3527,6 +3615,12 @@ body {
     width: 30px;
   }
 }
+.metrics ul li span.lang-ko::after {
+  color: #91A28F;
+}
+.metrics ul li span.lang-zh::after {
+  color: #DD577A;
+}
 .metrics ul li em {
   display: block;
   font-weight: 600;
@@ -3590,6 +3684,12 @@ body {
     font-weight: 300;
   }
 }
+.metrics ul li p.lang-ko {
+  color: rgba(145, 162, 143, 0.7);
+}
+.metrics ul li p.lang-zh {
+  color: rgba(221, 87, 122, 0.7);
+}
 
 @media (min-width: 1281px) {
   .wms {
@@ -3605,7 +3705,7 @@ body {
   text-align: center;
 }
 .wms header h2 {
-  background: url("../images/wms.svg") no-repeat center top;
+  background: url("../images/wms-en.svg") no-repeat center top;
   font-weight: 600;
   line-height: 1.3;
   color: #555;
@@ -3640,6 +3740,32 @@ body {
     font-size: 21px;
   }
 }
+.wms header h2.lang-ko {
+  background: url("../images/wms-ko.svg") no-repeat center top;
+}
+@media (min-width: 1281px) {
+  .wms header h2.lang-ko {
+    background-size: 60px;
+  }
+}
+@media (max-width: 1280px) {
+  .wms header h2.lang-ko {
+    background-size: 35px;
+  }
+}
+.wms header h2.lang-zh {
+  background: url("../images/wms-zh.svg") no-repeat center top;
+}
+@media (min-width: 1281px) {
+  .wms header h2.lang-zh {
+    background-size: 60px;
+  }
+}
+@media (max-width: 1280px) {
+  .wms header h2.lang-zh {
+    background-size: 35px;
+  }
+}
 .wms header p {
   line-height: 1.538;
   color: rgba(154, 129, 151, 0.7);
@@ -3672,6 +3798,12 @@ body {
   .wms header p br {
     display: none;
   }
+}
+.wms header p.lang-ko {
+  color: rgba(145, 162, 143, 0.7);
+}
+.wms header p.lang-zh {
+  color: rgba(221, 87, 122, 0.7);
 }
 .wms div {
   display: flex;
@@ -3775,16 +3907,16 @@ body {
   }
 }
 .wms ul li:nth-child(1)::before {
-  background-image: url("../images/wms1.svg");
+  background-image: url("../images/wms1-en.svg");
 }
 .wms ul li:nth-child(2)::before {
-  background-image: url("../images/wms2.svg");
+  background-image: url("../images/wms2-en.svg");
 }
 .wms ul li:nth-child(3)::before {
-  background-image: url("../images/wms3.svg");
+  background-image: url("../images/wms3-en.svg");
 }
 .wms ul li:nth-child(4)::before {
-  background-image: url("../images/wms4.svg");
+  background-image: url("../images/wms4-en.svg");
 }
 .wms ul li::before {
   content: "";
@@ -3855,6 +3987,30 @@ body {
     font-size: 12px;
   }
 }
+.wms ul li.lang-ko:nth-child(1)::before {
+  background-image: url("../images/wms1-ko.svg");
+}
+.wms ul li.lang-ko:nth-child(2)::before {
+  background-image: url("../images/wms2-ko.svg");
+}
+.wms ul li.lang-ko:nth-child(3)::before {
+  background-image: url("../images/wms3-ko.svg");
+}
+.wms ul li.lang-ko:nth-child(4)::before {
+  background-image: url("../images/wms4-ko.svg");
+}
+.wms ul li.lang-zh:nth-child(1)::before {
+  background-image: url("../images/wms1-zh.svg");
+}
+.wms ul li.lang-zh:nth-child(2)::before {
+  background-image: url("../images/wms2-zh.svg");
+}
+.wms ul li.lang-zh:nth-child(3)::before {
+  background-image: url("../images/wms3-zh.svg");
+}
+.wms ul li.lang-zh:nth-child(4)::before {
+  background-image: url("../images/wms4-zh.svg");
+}
 
 .companies {
   z-index: 3;
@@ -3891,6 +4047,12 @@ body {
   .companies h2 {
     font-size: 21px;
   }
+}
+.companies h2.lang-ko {
+  color: #91A28F;
+}
+.companies h2.lang-zh {
+  color: #DD577A;
 }
 .companies ul {
   display: flex;
@@ -4128,7 +4290,7 @@ body {
     padding-left: 20px;
   }
   .omnichannel header > div {
-    max-width: 702px;
+    max-width: 722px;
     padding-right: 250px;
   }
 }
@@ -4151,6 +4313,12 @@ body {
   .omnichannel header h2 {
     font-size: 35px;
   }
+}
+.omnichannel header h2.lang-ko {
+  color: #91A28F;
+}
+.omnichannel header h2.lang-zh {
+  color: #DD577A;
 }
 .omnichannel header em {
   display: block;
@@ -4214,6 +4382,39 @@ body {
   width: 142px;
   cursor: pointer;
 }
+.omnichannel header .swiper .swiper-slide:nth-child(1) div {
+  background-color: transparent; /* Transparent background */
+  border-radius: 20px; /* Rounded corners for all four sides */
+  background-image: url("../images/omnichannel1-en.jpg");
+}
+.omnichannel header .swiper .swiper-slide:nth-child(2) div {
+  background-color: transparent; /* Transparent background */
+  border-radius: 20px; /* Rounded corners for all four sides */
+  background-image: url("../images/omnichannel2-en.jpg");
+}
+.omnichannel header .swiper .swiper-slide:nth-child(3) div {
+  background-color: transparent; /* Transparent background */
+  border-radius: 20px; /* Rounded corners for all four sides */
+  background-image: url("../images/omnichannel3-en.jpg");
+}
+.omnichannel header .swiper .swiper-slide.lang-ko:nth-child(1) div {
+  background-image: url("../images/omnichannel1-en.jpg");
+}
+.omnichannel header .swiper .swiper-slide.lang-ko:nth-child(2) div {
+  background-image: url("../images/omnichannel2-en.jpg");
+}
+.omnichannel header .swiper .swiper-slide.lang-ko:nth-child(3) div {
+  background-image: url("../images/omnichannel3-en.jpg");
+}
+.omnichannel header .swiper .swiper-slide.lang-zh:nth-child(1) div {
+  background-image: url("../images/omnichannel1-en.jpg");
+}
+.omnichannel header .swiper .swiper-slide.lang-zh:nth-child(2) div {
+  background-image: url("../images/omnichannel2-en.jpg");
+}
+.omnichannel header .swiper .swiper-slide.lang-zh:nth-child(3) div {
+  background-image: url("../images/omnichannel3-en.jpg");
+}
 @media (min-width: 1281px) {
   .omnichannel > .swiper {
     width: 50%;
@@ -4256,8 +4457,57 @@ body {
     width: 270px;
   }
 }
+@media (min-width: 1281px) {
+  .omnichannel > .swiper .swiper-slide div {
+    width: 538px;
+  }
+}
+@media (max-width: 1280px) {
+  .omnichannel > .swiper .swiper-slide div {
+    width: 270px;
+  }
+}
+.omnichannel > .swiper .swiper-slide:nth-child(1) div {
+  background-color: transparent; /* Transparent background */
+  border-radius: 40px; /* Rounded corners for all four sides */
+  background-image: url("../images/omnichannel1-en.jpg");
+}
+.omnichannel > .swiper .swiper-slide:nth-child(2) div {
+  background-color: transparent; /* Transparent background */
+  border-radius: 40px; /* Rounded corners for all four sides */
+  background-image: url("../images/omnichannel2-en.jpg");
+}
+.omnichannel > .swiper .swiper-slide:nth-child(3) div {
+  background-color: transparent; /* Transparent background */
+  border-radius: 40px; /* Rounded corners for all four sides */
+  background-image: url("../images/omnichannel3-en.jpg");
+}
+.omnichannel > .swiper .swiper-slide.lang-ko:nth-child(1) div {
+  background-image: url("../images/omnichannel1-en.jpg");
+}
+.omnichannel > .swiper .swiper-slide.lang-ko:nth-child(2) div {
+  background-image: url("../images/omnichannel2-en.jpg");
+}
+.omnichannel > .swiper .swiper-slide.lang-ko:nth-child(3) div {
+  background-image: url("../images/omnichannel3-en.jpg");
+}
+.omnichannel > .swiper .swiper-slide.lang-zh:nth-child(1) div {
+  background-image: url("../images/omnichannel1-en.jpg");
+}
+.omnichannel > .swiper .swiper-slide.lang-zh:nth-child(2) div {
+  background-image: url("../images/omnichannel2-en.jpg");
+}
+.omnichannel > .swiper .swiper-slide.lang-zh:nth-child(3) div {
+  background-image: url("../images/omnichannel3-en.jpg");
+}
 .omnichannel .swiper-slide img {
   display: block;
+  aspect-ratio: 1/1.34758;
+  width: 100%;
+}
+.omnichannel .swiper-slide div {
+  display: block;
+  background-size: cover;
   aspect-ratio: 1/1.34758;
   width: 100%;
 }
@@ -4298,6 +4548,12 @@ body {
   .services header h2 {
     font-size: 35px;
   }
+}
+.services header h2.lang-ko {
+  color: #91A28F;
+}
+.services header h2.lang-zh {
+  color: #DD577A;
 }
 .services header em {
   display: block;
@@ -4515,7 +4771,7 @@ body {
   justify-content: center;
   align-items: center;
   aspect-ratio: 1/0.390625;
-  background: url("../images/banner.jpg") no-repeat center/cover;
+  background: url("../images/banner-en.jpg") no-repeat center/cover;
   text-align: center;
   color: #fff;
 }
@@ -4642,6 +4898,20 @@ body {
     line-height: 40px;
   }
 }
+.banner a.lang-ko {
+  color: #91A28F;
+}
+.banner a.lang-zh {
+  color: #DD577A;
+}
+
+.banner.lang-ko {
+  background: url("../images/banner-ko.jpg") no-repeat center/cover;
+}
+
+.banner.lang-zh {
+  background: url("../images/banner-zh.jpg") no-repeat center/cover;
+}
 
 .products {
   margin-left: auto;
@@ -4678,6 +4948,12 @@ body {
   .products header h2 {
     font-weight: 600;
   }
+}
+.products header h2.lang-ko {
+  color: #91A28F;
+}
+.products header h2.lang-zh {
+  color: #DD577A;
 }
 .products header p {
   font-weight: 300;
@@ -4927,6 +5203,12 @@ body {
     font-size: 21px;
   }
 }
+.inquiry header h2.lang-ko {
+  color: #91A28F;
+}
+.inquiry header h2.lang-zh {
+  color: #DD577A;
+}
 .inquiry header p {
   letter-spacing: -0.02em;
   line-height: 1.25;
@@ -5101,6 +5383,12 @@ body {
     font-size: 13px;
   }
 }
+.inquiry form button.lang-ko {
+  background: #91A28F;
+}
+.inquiry form button.lang-zh {
+  background: #DD577A;
+}
 
 #footer {
   background: url("../images/footer.jpg") no-repeat center/cover;
@@ -5210,6 +5498,12 @@ body {
 }
 #footer > div .selects select + select {
   margin-left: 18px;
+}
+#footer > div .selects select.lang-ko {
+  color: #91A28F;
+}
+#footer > div .selects select.lang-zh {
+  color: #DD577A;
 }
 #footer > div h1 {
   filter: grayscale(1) brightness(100);
@@ -5384,6 +5678,18 @@ body {
     width: 20px;
   }
 }
+.pagination .swiper-pagination-bullet-active .lang-ko,
+.pagination2 .swiper-pagination-bullet-active .lang-ko,
+.pagination3 .swiper-pagination-bullet-active .lang-ko,
+.pagination4 .swiper-pagination-bullet-active .lang-ko {
+  background: #91A28F;
+}
+.pagination .swiper-pagination-bullet-active .lang-zh,
+.pagination2 .swiper-pagination-bullet-active .lang-zh,
+.pagination3 .swiper-pagination-bullet-active .lang-zh,
+.pagination4 .swiper-pagination-bullet-active .lang-zh {
+  background: #DD577A;
+}
 
 *[class^=flag_] {
   display: inline-block;
@@ -5422,6 +5728,12 @@ body {
   transition: all 1s ease-in-out;
   mix-blend-mode: difference;
   pointer-events: none;
+}
+.cursor .lang-ko {
+  background: #91A28F;
+}
+.cursor .lang-zh {
+  background: #DD577A;
 }
 
 .cursor.on {
@@ -5536,6 +5848,12 @@ body.mobile #custom_cursor_text {
 .custom_hover_circle {
   z-index: 1;
   background: #9a8197 no-repeat center center;
+}
+.custom_hover_circle .lang-ko {
+  background: #91A28F no-repeat center center;
+}
+.custom_hover_circle .lang-zh {
+  background: #DD577A no-repeat center center;
 }
 
 .custom_hover_text {
