--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1065,6 +1065,7 @@ body {
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
+  background-color: #9a8197;
   color: #9a8197;
 }
 @media (min-width: 1281px) {
@@ -1076,9 +1077,6 @@ body {
   #header {
     height: 62px;
   }
-}
-#header .lang-ko {
-  color: #91A28F;
 }
 #header:not(.fixed) {
   position: relative;
@@ -1096,7 +1094,6 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background: rgba(255, 255, 255, 0.95);
 }
 @media (min-width: 1281px) {
   #header.temp:not(.opened) {
@@ -1391,6 +1388,225 @@ body {
   }
 }
 
+#header.lang-ko {
+  background-color: #91A28F;
+  color: #91A28F;
+}
+
+#header.lang-zh {
+  background-color: #DD577A;
+  color: #DD577A;
+}
+
+@media (min-width: 1281px) {
+  .howitworks {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: relative;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks {
+    position: relative;
+  }
+}
+.howitworks .swiper {
+  background-color: #9a8197;
+  padding-right: 250px;
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper {
+    width: 100%;
+    height: 890px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper {
+    height: 503px;
+  }
+}
+.howitworks .swiper .swiper-wrapper {
+  counter-reset: numbering;
+}
+.howitworks .swiper .swiper-slide {
+  position: relative;
+  margin-left: 240px;
+  margin-right: 240px;
+  padding-bottom: 100px;
+  background-color: #9a8197;
+  background-size: cover;
+}
+.howitworks .swiper .swiper-slide:nth-child(1) div {
+  background-image: url("../images/howitworks1.png");
+}
+.howitworks .swiper .swiper-slide:nth-child(2) div {
+  background-image: url("../images/howitworks2.png");
+}
+.howitworks .swiper .swiper-slide:nth-child(3) div {
+  background-image: url("../images/howitworks3.png");
+}
+.howitworks .swiper .swiper-slide:nth-child(4) div {
+  background-image: url("../images/howitworks4.png");
+}
+.howitworks .swiper .swiper-slide:nth-child(5) div {
+  background-image: url("../images/howitworks5.png");
+}
+.howitworks .swiper .swiper-slide.lang-ko {
+  background-color: #91A28F;
+}
+.howitworks .swiper .swiper-slide.lang-zh {
+  background-color: #DD577A;
+}
+.howitworks .swiper .swiper-slide h2 {
+  padding-top: 100px;
+  color: #F7C74F;
+  font-family: Poppins;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 85px; /* 106.25% */
+  max-width: 856px;
+}
+.howitworks .swiper .swiper-slide h3 {
+  color: #FFF;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Poppins;
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  max-width: 856px;
+}
+.howitworks .swiper .swiper-slide p {
+  color: #FFF;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 30px; /* 166.667% */
+  max-width: 856px;
+}
+.howitworks .swiper .swiper-slide div {
+  border: 0px solid transparent;
+  position: absolute; /* Set the image to absolute positioning */
+  margin-right: 284px;
+  bottom: 0; /* Align the image to the bottom of the wrapper */
+  right: 0; /* Align the image to the right of the wrapper */
+  width: 485px; /* Optional: Set a fixed width for the image */
+  height: 485px; /* Keep the image's aspect ratio */
+  opacity: 0;
+  transform: translateX(100%); /* Start the image off-screen to the right */
+  transition: transform 0.5s ease-out, opacity 1s ease-out;
+}
+.howitworks .swiper .swiper-slide:nth-child(1) div {
+  opacity: 1;
+  transform: translateX(0%); /* Start the image off-screen to the right */
+}
+.howitworks .swiper.lang-ko {
+  background-color: #91A28F;
+}
+.howitworks .swiper.lang-zh {
+  background-color: #DD577A;
+}
+.howitworks .swiper-pagination {
+  margin-right: 240px;
+}
+.howitworks .swiper-pagination-bullet {
+  background: transparent !important;
+  border: 1px solid #fff;
+  opacity: 1;
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper-pagination-bullet {
+    margin: 10 5px !important;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination-bullet {
+    margin: 10 4px !important;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper-pagination-bullet {
+    height: 10px !important;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination-bullet {
+    height: 8px !important;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper-pagination-bullet {
+    border-radius: 5px !important;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination-bullet {
+    border-radius: 4px !important;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper-pagination-bullet {
+    width: 10px !important;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination-bullet {
+    width: 8px !important;
+  }
+}
+.howitworks .swiper-pagination-bullet-active {
+  background: transparent !important;
+  border: 1px solid #F7C74F;
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper-pagination-bullet-active {
+    margin: 10 5px !important;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination-bullet-active {
+    margin: 10 4px !important;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper-pagination-bullet-active {
+    height: 10px !important;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination-bullet-active {
+    height: 8px !important;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper-pagination-bullet-active {
+    border-radius: 5px !important;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination-bullet-active {
+    border-radius: 4px !important;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper-pagination-bullet-active {
+    height: 60px !important;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination-bullet-active {
+    height: 40px !important;
+  }
+}
+
 .vi {
   z-index: 0;
   position: relative;
@@ -1401,16 +1617,6 @@ body {
   align-items: center;
   height: calc(100vh  - 0px);
   height: calc(var(--vh, 1vh) * 100  - 0px);
-}
-@media (min-width: 1281px) {
-  .vi {
-    margin-top: -118px;
-  }
-}
-@media (max-width: 1280px) {
-  .vi {
-    margin-top: -62px;
-  }
 }
 @media (min-width: 1281px) {
   .vi {
@@ -1757,155 +1963,6 @@ body {
 @media (max-width: 1280px) {
   .vi .swiper-pagination-vi span.swiper-pagination-bullet-active {
     width: 40px !important;
-  }
-}
-
-.howitworks {
-  background-color: #b4ad1e;
-}
-@media (min-width: 1281px) {
-  .howitworks {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    position: relative;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks {
-    position: relative;
-  }
-}
-@media (min-width: 1281px) {
-  .howitworks .swiper {
-    width: 100%;
-    height: 300px;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks .swiper {
-    height: 300px;
-  }
-}
-.howitworks .swiper .swiper-wrapper {
-  counter-reset: numbering;
-}
-.howitworks .swiper .swiper-slide {
-  background-size: cover;
-}
-.howitworks .swiper .swiper-slide:nth-child(1) {
-  background-image: url("../images/vi1.jpg");
-}
-@media (max-width: 480px) {
-  .howitworks .swiper .swiper-slide:nth-child(1) {
-    background-image: url("../images/vi1_m.jpg");
-  }
-}
-.howitworks .swiper .swiper-slide:nth-child(2) {
-  background-image: url("../images/vi2.jpg");
-}
-@media (max-width: 480px) {
-  .howitworks .swiper .swiper-slide:nth-child(2) {
-    background-image: url("../images/vi2_m.jpg");
-  }
-}
-.howitworks .swiper .swiper-slide:nth-child(3) {
-  background-image: url("../images/vi3.jpg");
-}
-@media (max-width: 480px) {
-  .howitworks .swiper .swiper-slide:nth-child(3) {
-    background-image: url("../images/vi3_m.jpg");
-  }
-}
-.howitworks .swiper-pagination-bullet {
-  background: transparent !important;
-  border: 1px solid #fff;
-  opacity: 1;
-}
-@media (min-width: 1281px) {
-  .howitworks .swiper-pagination-bullet {
-    margin: 10 5px !important;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks .swiper-pagination-bullet {
-    margin: 10 4px !important;
-  }
-}
-@media (min-width: 1281px) {
-  .howitworks .swiper-pagination-bullet {
-    height: 10px !important;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks .swiper-pagination-bullet {
-    height: 8px !important;
-  }
-}
-@media (min-width: 1281px) {
-  .howitworks .swiper-pagination-bullet {
-    border-radius: 5px !important;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks .swiper-pagination-bullet {
-    border-radius: 4px !important;
-  }
-}
-@media (min-width: 1281px) {
-  .howitworks .swiper-pagination-bullet {
-    width: 10px !important;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks .swiper-pagination-bullet {
-    width: 8px !important;
-  }
-}
-.howitworks .swiper-pagination-bullet-active {
-  background: transparent !important;
-  border: 1px solid #9b8298;
-}
-@media (min-width: 1281px) {
-  .howitworks .swiper-pagination-bullet-active {
-    margin: 10 5px !important;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks .swiper-pagination-bullet-active {
-    margin: 10 4px !important;
-  }
-}
-@media (min-width: 1281px) {
-  .howitworks .swiper-pagination-bullet-active {
-    height: 10px !important;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks .swiper-pagination-bullet-active {
-    height: 8px !important;
-  }
-}
-@media (min-width: 1281px) {
-  .howitworks .swiper-pagination-bullet-active {
-    border-radius: 5px !important;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks .swiper-pagination-bullet-active {
-    border-radius: 4px !important;
-  }
-}
-@media (min-width: 1281px) {
-  .howitworks .swiper-pagination-bullet-active {
-    height: 60px !important;
-  }
-}
-@media (max-width: 1280px) {
-  .howitworks .swiper-pagination-bullet-active {
-    height: 40px !important;
   }
 }
 
@@ -2338,19 +2395,25 @@ body {
   font-style: normal;
   font-weight: 700;
 }
+.logistics .swiper .swiper-slide div h2.lang-ko {
+  color: rgba(145, 162, 143, 0.2);
+}
+.logistics .swiper .swiper-slide div h2.lang-zh {
+  color: rgba(221, 87, 122, 0.2);
+}
 .logistics .swiper .swiper-slide div h3 {
   margin-top: 30px;
-  color: #9A8197;
+  color: #9a8197;
   font-family: Poppins;
   font-size: 36px;
   font-style: normal;
   font-weight: 400;
 }
-.logistics .swiper .swiper-slide div h2.lang-ko {
-  color: rgba(145, 162, 143, 0.5);
+.logistics .swiper .swiper-slide div h3.lang-ko {
+  color: #91A28F;
 }
-.logistics .swiper .swiper-slide div h2.lang-zh {
-  color: rgba(221, 87, 122, 0.5);
+.logistics .swiper .swiper-slide div h3.lang-zh {
+  color: #DD577A;
 }
 .logistics .swiper .swiper-slide div p {
   line-height: 1.76;
