--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1065,8 +1065,6 @@ body {
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
-  background-color: #9a8197;
-  color: #9a8197;
 }
 @media (min-width: 1281px) {
   #header {
@@ -1079,6 +1077,8 @@ body {
   }
 }
 #header:not(.fixed) {
+  background-color: #9a8197;
+  color: #9a8197;
   position: relative;
 }
 #header:not(.fixed) h1,
@@ -1090,10 +1090,19 @@ body {
     filter: grayscale(1) brightness(100);
   }
 }
+#header:not(.fixed).lang-ko {
+  background-color: #91A28F;
+  color: #91A28F;
+}
+#header:not(.fixed).lang-zh {
+  background-color: #DD577A;
+  color: #DD577A;
+}
 #header.fixed {
   position: fixed;
   top: 0;
   left: 0;
+  background: rgba(255, 255, 255, 0.95);
 }
 @media (min-width: 1281px) {
   #header.temp:not(.opened) {
@@ -1341,7 +1350,7 @@ body {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
-  color: #FFF;
+  color: #9a8197;
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -1388,16 +1397,6 @@ body {
   }
 }
 
-#header.lang-ko {
-  background-color: #91A28F;
-  color: #91A28F;
-}
-
-#header.lang-zh {
-  background-color: #DD577A;
-  color: #DD577A;
-}
-
 @media (min-width: 1281px) {
   .howitworks {
     display: flex;
@@ -1415,17 +1414,37 @@ body {
 }
 .howitworks .swiper {
   background-color: #9a8197;
-  padding-right: 250px;
+  position: sticky;
 }
 @media (min-width: 1281px) {
   .howitworks .swiper {
-    width: 100%;
-    height: 890px;
+    padding-right: 260px;
   }
 }
 @media (max-width: 1280px) {
   .howitworks .swiper {
-    height: 503px;
+    padding-right: 86px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper {
+    padding-right: 40px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper {
+    padding-right: 40px;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper {
+    width: 100%;
+    height: calc(100vh - 117px);
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper {
+    height: calc(100vh - 62px);
   }
 }
 .howitworks .swiper .swiper-wrapper {
@@ -1433,25 +1452,68 @@ body {
 }
 .howitworks .swiper .swiper-slide {
   position: relative;
-  margin-left: 240px;
-  margin-right: 240px;
   padding-bottom: 100px;
   background-color: #9a8197;
   background-size: cover;
 }
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide {
+    margin-left: 240px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide {
+    margin-left: 66px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide {
+    margin-left: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide {
+    margin-left: 20px;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide {
+    margin-right: 240px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide {
+    margin-right: 66px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide {
+    margin-right: 20px;
+  }
+}
 .howitworks .swiper .swiper-slide:nth-child(1) div {
+  background-size: cover;
   background-image: url("../images/howitworks1.png");
 }
 .howitworks .swiper .swiper-slide:nth-child(2) div {
+  background-size: cover;
   background-image: url("../images/howitworks2.png");
 }
 .howitworks .swiper .swiper-slide:nth-child(3) div {
+  background-size: cover;
   background-image: url("../images/howitworks3.png");
 }
 .howitworks .swiper .swiper-slide:nth-child(4) div {
+  background-size: cover;
   background-image: url("../images/howitworks4.png");
 }
 .howitworks .swiper .swiper-slide:nth-child(5) div {
+  background-size: cover;
   background-image: url("../images/howitworks5.png");
 }
 .howitworks .swiper .swiper-slide.lang-ko {
@@ -1461,14 +1523,111 @@ body {
   background-color: #DD577A;
 }
 .howitworks .swiper .swiper-slide h2 {
-  padding-top: 100px;
   color: #F7C74F;
   font-family: Poppins;
-  font-size: 80px;
   font-style: normal;
   font-weight: 700;
   line-height: 85px; /* 106.25% */
-  max-width: 856px;
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 99px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 66px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 20px;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 80px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 40px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 29px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 29px;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 85px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 54px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 36px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 36px;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide h2 {
+    max-width: 717px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h2 {
+    max-width: 717px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide h2 {
+    max-width: 717px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide h2 {
+    max-width: 717px;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: 0px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: 0px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: 0px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: -0.29px;
+  }
 }
 .howitworks .swiper .swiper-slide h3 {
   color: #FFF;
@@ -1479,7 +1638,7 @@ body {
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  max-width: 856px;
+  max-width: 717px;
 }
 .howitworks .swiper .swiper-slide p {
   color: #FFF;
@@ -1490,19 +1649,76 @@ body {
   font-style: normal;
   font-weight: 300;
   line-height: 30px; /* 166.667% */
-  max-width: 856px;
+  max-width: 717px;
 }
 .howitworks .swiper .swiper-slide div {
   border: 0px solid transparent;
   position: absolute; /* Set the image to absolute positioning */
-  margin-right: 284px;
   bottom: 0; /* Align the image to the bottom of the wrapper */
   right: 0; /* Align the image to the right of the wrapper */
-  width: 485px; /* Optional: Set a fixed width for the image */
-  height: 485px; /* Keep the image's aspect ratio */
   opacity: 0;
   transform: translateX(100%); /* Start the image off-screen to the right */
   transition: transform 0.5s ease-out, opacity 1s ease-out;
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide div {
+    margin-right: 240px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide div {
+    margin-right: 66px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide div {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide div {
+    margin-right: 20px;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide div {
+    height: 485px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide div {
+    height: 400px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide div {
+    height: 230px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide div {
+    height: 230px;
+  }
+}
+@media (min-width: 1281px) {
+  .howitworks .swiper .swiper-slide div {
+    width: 485px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide div {
+    width: 400px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper .swiper-slide div {
+    width: 230px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide div {
+    width: 230px;
+  }
 }
 .howitworks .swiper .swiper-slide:nth-child(1) div {
   opacity: 1;
@@ -1514,8 +1730,25 @@ body {
 .howitworks .swiper.lang-zh {
   background-color: #DD577A;
 }
-.howitworks .swiper-pagination {
-  margin-right: 240px;
+@media (min-width: 1281px) {
+  .howitworks .swiper-pagination {
+    margin-right: 240px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination {
+    margin-right: 66px;
+  }
+}
+@media (max-width: 640px) {
+  .howitworks .swiper-pagination {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper-pagination {
+    margin-right: 20px;
+  }
 }
 .howitworks .swiper-pagination-bullet {
   background: transparent !important;
@@ -5768,19 +6001,15 @@ body {
 }
 
 .flag_global {
-  background-image: url("../images/flag_earth.svg");
+  background-image: url("../images/flag_earth_white.svg");
 }
 
 .flag_korea {
-  background-image: url("../images/flag_korea.svg");
-}
-
-.flag_hongkong {
-  background-image: url("../images/flag_hongkong.svg");
+  background-image: url("../images/flag_korea_white.svg");
 }
 
 .flag_china {
-  background-image: url("../images/flag_china.svg");
+  background-image: url("../images/flag_china_white.svg");
 }
 
 .cursor {
