--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -34,10 +34,11 @@ body {
     @include each(height, $headerW, $headerM);
     @include flex(row, nowrap, center, center);
 
-    background-color: $primary-color-en;
-    color: $primary-color-en;
+    
 
     &:not(.fixed) {
+        background-color: $primary-color-en;
+        color: $primary-color-en;
         position: relative;
         h1,
         > div > button {
@@ -49,11 +50,22 @@ body {
             }
         }
     }
+
+    &:not(.fixed).lang-ko {
+        background-color: $primary-color-ko;
+        color: $primary-color-ko;
+    }
+    
+    &:not(.fixed).lang-zh {
+        background-color: $primary-color-zh;
+        color: $primary-color-zh;
+    }
+
     &.fixed {
         position: fixed;
         top: 0;
         left: 0;
-        // background: rgba(#fff, 0.95);
+        background: rgba(#fff, 0.95);
     }
     &.temp:not(.opened) {
         @include each(top, -$headerW, -$headerM);
@@ -196,7 +208,7 @@ body {
     }
     nav {
         @include flex(row, wrap, flex-start, flex-start);
-        color: #FFF;
+        color: $primary-color-en;
         font-family: Poppins;
         font-size: 16px;
         font-style: normal;
@@ -238,15 +250,7 @@ body {
     }
 }
 
-#header.lang-ko {
-    background-color: $primary-color-ko;
-    color: $primary-color-ko;
-}
 
-#header.lang-zh {
-    background-color: $primary-color-zh;
-    color: $primary-color-zh;
-}
 
 
 // //HowItWorks
@@ -264,7 +268,21 @@ body {
     
     .swiper {
         background-color: $primary-color-en;
-        padding-right:250px;
+        // padding-right:240px;
+        @include each4(padding-right, calc(240px + 20px), calc(66px + 20px), calc(20px + 20px), calc(20px + 20px));
+        // @include wide {
+        //     padding-right: calc(240px + 20px);
+        // }
+        // @include middle {
+        //     padding-right: calc(66px + 20px);
+        // }
+        // @include narrow {
+        //     padding-right: calc(20px + 20px);
+        // }
+        // @include narrowest {
+        //     padding-right: calc(20px + 20px);
+        // }
+        position: sticky;  
         //     position: absolute;
         //     left: 0;
         //     right: 0;
@@ -272,7 +290,8 @@ body {
         // height: 100%;
         @include wide {
             width: 100%; //calc(50% - 10px);
-            height: 890px;
+            // height: 890px;
+            height: calc(100vh - 117px);
         }
         @include middle {
             // @include vhcalc(height, '+ 215px');
@@ -280,7 +299,8 @@ body {
             // max-height: 717px;
             // border-radius: 0 0 75px 0;
             // overflow: hidden;
-            height: 503px;
+            // height: 503px;
+            height: calc(100vh - 62px);
         }
         .swiper-wrapper {
             counter-reset: numbering;
@@ -290,20 +310,32 @@ body {
         }
         .swiper-slide {
             position: relative;
-            margin-left: 240px;
-            margin-right: 240px;
+
+            @include each4(margin-left, 240px, 66px, 20px, 20px);
+            @include each4(margin-right, 240px, 66px, 20px, 20px);
+            // @include wide {
+            //     margin-left: 240px;
+            //     margin-right: 240px;
+            // }
+            // @include middle {
+            //     margin-left: 66px;
+            //     margin-right: 66px;
+            // }
+            // @include narrow {
+            //     margin-left: 20px;
+            //     margin-right: 20px;
+            // }
+            // @include narrowest {
+            //     margin-left: 20px;
+            //     margin-right: 20px;
+            // }
             padding-bottom: 100px;
             background-color: $primary-color-en;
             background-size: cover;
             @for $i from 1 through 5 {
                 &:nth-child(#{$i}) div {
-                    // background-size: cover;             /* Scale the image to cover the element */
-                    // background-position: center;        /* Center the image */
-                    // border: none;                       /* Hide the border */
+                    background-size: cover;
                     background-image: url("../images/howitworks#{$i}.png");
-                    // @include narrowest {
-                        // background-image: url("../images/vi#{$i}_m.jpg");
-                    // }
                 }
             }
         }
@@ -315,14 +347,54 @@ body {
         }
 
         .swiper-slide h2 {
-            padding-top: 100px;
+
+            
+            @include each4(padding-top, 99px, 66px, 20px, 20px);
+            @include each4(font-size, 80px, 40px, 29px, 29px);
+            @include each4(line-height, 85px, 54px, 36px, 36px);
+
+            @include each4(max-width, 717px, 717px, 717px, 717px);
+
             color: #F7C74F;
             font-family: Poppins;
-            font-size: 80px;
             font-style: normal;
             font-weight: 700;
             line-height: 85px; /* 106.25% */    
-            max-width: 856px;
+
+            @include each4(letter-spacing, 0px, 0px, 0px, -0.29px);
+            
+            // @include wide {
+            //     // padding-top: 99px;
+                
+            //     // max-width: 856px;
+            // }
+            // @include middle {
+            //     // padding-top: 66px;
+            //     color: #F7C74F;
+            //     font-family: Poppins;
+            //     // font-size: 40px;
+            //     font-style: normal;
+            //     font-weight: 700;
+            //     line-height: 54px; /* 135% */
+            // }
+            // @include narrow {
+            //     // padding-top: 20px;
+            //     color: #F7C74F;
+            //     font-family: Poppins;
+            //     // font-size: 40px;
+            //     font-style: normal;
+            //     font-weight: 700;
+            //     line-height: 54px; /* 135% */
+            // }
+            // @include narrowest {
+            //     // padding-top: 20px;
+            //     color: #F7C74F;
+            //     font-family: Poppins;
+            //     font-size: 40px;
+            //     font-style: normal;
+            //     font-weight: 700;
+            //     line-height: 54px; /* 135% */
+            // }
         }
 
         .swiper-slide h3 {
@@ -334,7 +406,7 @@ body {
             font-style: normal;
             font-weight: 600;
             line-height: normal;
-            max-width: 856px;
+            max-width: 717px;
         }
 
         .swiper-slide p {
@@ -346,18 +418,25 @@ body {
             font-style: normal;
             font-weight: 300;
             line-height: 30px; /* 166.667% */
-            max-width: 856px;
+            max-width: 717px;
         }
 
         .swiper-slide div {
             // background-color: #1e39b4;
             border: 0px solid transparent;
             position: absolute;  /* Set the image to absolute positioning */
-            margin-right:284px;
+            // margin-right:240px;
+            
+            @include each4(margin-right, 240px, 66px, 20px, 20px);
+
             bottom: 0;           /* Align the image to the bottom of the wrapper */
             right: 0;            /* Align the image to the right of the wrapper */
-            width: 485px;         /* Optional: Set a fixed width for the image */
-            height: 485px;        /* Keep the image's aspect ratio */
+            // width: 485px;         /* Optional: Set a fixed width for the image */
+            // height: 485px;        /* Keep the image's aspect ratio */
+            
+            @include each4(height, 485px, 400px, 230px, 230px);
+            @include each4(width, 485px, 400px, 230px, 230px);
+
             opacity: 0.0;
             // margin-right: 44px;
             transform: translateX(
@@ -386,7 +465,7 @@ body {
     }
 
     .swiper-pagination {
-        margin-right: 240px;
+        @include each4(margin-right, 240px, 66px, 20px, 20px);
     }
 
     .swiper-pagination-bullet {
@@ -2504,16 +2583,13 @@ body {
     background-position: center;
 }
 .flag_global {
-    background-image: url("../images/flag_earth.svg");
+    background-image: url("../images/flag_earth_white.svg");
 }
 .flag_korea {
-    background-image: url("../images/flag_korea.svg");
-}
-.flag_hongkong {
-    background-image: url("../images/flag_hongkong.svg");
+    background-image: url("../images/flag_korea_white.svg");
 }
 .flag_china {
-    background-image: url("../images/flag_china.svg");
+    background-image: url("../images/flag_china_white.svg");
 }
 
 .cursor {
