--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3271,6 +3271,26 @@ body {
     top: 42px;
   }
 }
+@media (min-width: 1281px) {
+  .fulfillment_new .fullfillment_new_container .swiper-slide:nth-child(4) p.lang-ko, .fulfillment_new .fullfillment_new_container .swiper-slide:nth-child(5) p.lang-ko {
+    top: 108px;
+  }
+}
+@media (max-width: 1280px) {
+  .fulfillment_new .fullfillment_new_container .swiper-slide:nth-child(4) p.lang-ko, .fulfillment_new .fullfillment_new_container .swiper-slide:nth-child(5) p.lang-ko {
+    top: 71px;
+  }
+}
+@media (min-width: 1281px) {
+  .fulfillment_new .fullfillment_new_container .swiper-slide:nth-child(4) p.lang-zh, .fulfillment_new .fullfillment_new_container .swiper-slide:nth-child(5) p.lang-zh {
+    top: 108px;
+  }
+}
+@media (max-width: 1280px) {
+  .fulfillment_new .fullfillment_new_container .swiper-slide:nth-child(4) p.lang-zh, .fulfillment_new .fullfillment_new_container .swiper-slide:nth-child(5) p.lang-zh {
+    top: 71px;
+  }
+}
 .fulfillment_new .fullfillment_new_container .swiper-slide:nth-child(5) p {
   line-height: 1.6;
 }
@@ -3474,6 +3494,12 @@ body {
   font-weight: 400;
   line-height: 40px;
   letter-spacing: -0.125px;
+}
+.fulfillment_new .fullfillment_new_container .swiper-slide p.safari > lang-ko-quot-begin {
+  margin-left: -45px;
+}
+.fulfillment_new .fullfillment_new_container .swiper-slide p.safari > lang-zh-quot-begin {
+  margin-left: -45px;
 }
 
 .fulfillment {
